Added function to generate html format from markdown. Added new enpoint
